RESOLVED FIXED60153
Fix missing header in case SVG is disabled
https://bugs.webkit.org/show_bug.cgi?id=60153
Summary Fix missing header in case SVG is disabled
Dominic Battre
Reported 2011-05-04 03:58:44 PDT
Fix missing header in case SVG is disabled
Attachments
Patch (982 bytes, patch)
2011-05-04 04:20 PDT, Dominic Battre
no flags
Dominic Battre
Comment 1 2011-05-04 04:02:39 PDT
*** Bug 60154 has been marked as a duplicate of this bug. ***
Dominic Battre
Comment 2 2011-05-04 04:20:53 PDT
Dominic Battre
Comment 3 2011-05-04 04:24:38 PDT
This is the compile failure if SVN is not enabled: third_party/WebKit/Source/WebCore/dom/EventDispatcher.cpp: In member function ‘WTF::PassRefPtr<WebCore::EventTarget> WebCore::EventDispatcher::adjustToShadowBoundaries(WTF::PassRefPtr<WebCore::Node>, WTF::Vector<WebCore::Node*, 0ul>)’: third_party/WebKit/Source/WebCore/dom/EventDispatcher.cpp:167: error: comparison between distinct pointer types ‘WebCore::Element*’ and ‘WebCore::Node*’ lacks a cast third_party/WebKit/Source/WebCore/dom/EventDispatcher.cpp: In member function ‘void WebCore::EventDispatcher::ensureEventAncestors(WebCore::Event*)’: third_party/WebKit/Source/WebCore/dom/EventDispatcher.cpp:258: error: cannot convert ‘WebCore::Element*’ to ‘WebCore::Node*’ in assignment make: *** [out/Debug/obj.target/webcore_remaining/third_party/WebKit/Source/WebCore/dom/EventDispatcher.o] Error 1
WebKit Commit Bot
Comment 4 2011-05-04 06:37:09 PDT
Comment on attachment 92216 [details] Patch Clearing flags on attachment: 92216 Committed r85742: <http://trac.webkit.org/changeset/85742>
WebKit Commit Bot
Comment 5 2011-05-04 06:37:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.