2011-05-04  Dominic Battre  <battre@chromium.org>

Reviewed by Tony Gentilcore.

        Fix missing header in case SVG is disabled
        https://bugs.webkit.org/show_bug.cgi?id=60153

        * dom/EventDispatcher.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@85742 bbb929c8-8fbe-4397-9dbb-9b2b20218538