third_party/WebKit/Source/WebCore/dom/EventDispatcher.cpp
@@ -27,6 +27,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "EventDispatcher.h"
 
+#include "Element.h"
 #include "Event.h"
 #include "EventContext.h"
 #include "EventTarget.h"
@@ -392,4 +393,3 @@ EventDispatchBehavior EventDispatcher::determineDispatchBehavior(Event* event)
 }
 
 }
-
